# opennerf

./: .gitignore  LICENSE  README.md  pyproject.toml
datasets/: iphone_preprocess.py  preprocess.py  replica.py  replica_class_id_to_names.txt  replica_preprocess.py  replica_semantics.py  replica_visualize.py
datasets/replica_gt_instances/: instance_labels_office0.txt  instance_labels_office1.txt  instance_labels_room1.txt
datasets/replica_gt_semantics/: semantic_labels_office0.txt  semantic_labels_office1.txt  semantic_labels_office2.txt  semantic_labels_office3.txt  semantic_labels_office4.txt  semantic_labels_room0.txt  semantic_labels_room1.txt  semantic_labels_room2.txt
opennerf/: opennerf_config.py  opennerf_datamanager.py  opennerf_field.py  opennerf_fieldheadnames.py  opennerf_model.py  opennerf_pipeline.py  opennerf_renderers.py
opennerf/data/utils/: dino_dataloader.py  dino_extractor.py  feature_dataloader.py  openseg_dataloader.py  openseg_extractor.py
opennerf/encoders/: clip_encoder.py  openclip_encoder.py
scripts/: train_eval_replica_semantics.py
